bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q4 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]@3 as product, first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]@4 as label, first_value(propertyTextual) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]@5 as propertyTextual]
  GlobalLimitExec: skip=5, fetch=10
    SortExec: TopK(fetch=15), expr=[AS_SORTABLE_BYTES(ENC_TF(label))@0 ASC, product@1 ASC, propertyTextual@2 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(ENC_TF(label))@0 ASC]
      AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(ENC_TF(label)), product@1 as product, propertyTextual@3 as propertyTextual], aggr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST], first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST], first_value(propertyTextual) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(label)) ASC NULLS FIRST, product ASC NULLS FIRST, propertyTextual ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
        ProjectionExec: expr=[AS_SORTABLE_BYTES(ENC_TF(label@1)) as __common_expr_1, product@0 as product, label@1 as label, propertyTextual@2 as propertyTextual]
          SortPreservingMergeExec: [AS_SORTABLE_BYTES(ENC_TF(label@1)) ASC]
            SortExec: expr=[AS_SORTABLE_BYTES(ENC_TF(label@1)) ASC], preserve_partitioning=[true]
              ProjectionExec: expr=[product@0 as product, label@1 as label, propertyTextual@2 as propertyTextual]
                DecodeObjectIdsExec: projections=[decode(product) as product, decode(label) as label, decode(propertyTextual) as propertyTextual, p1, p2]
                  UnionExec
                    ProjectionExec: expr=[product__oid@0 as product, label__oid@2 as label, propertyTextual__oid@3 as propertyTextual, p1@1 as p1, NULL as p2]
                      FilterExec: EBV(GT(ENC_TF(p1@1), 4:4:457))
                        DecodeObjectIdsExec: projections=[product__oid, decode(p1__oid) as p1, label__oid, propertyTextual__oid]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p1__oid@1, label__oid@2, propertyTextual__oid@4]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p1__oid@1, label__oid@2]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p1__oid@1, label__oid@2]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p1__oid@1, label__oid@3]
                                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p1__oid@2]
                                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType138>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 137, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 137 AND 137 <= object_max@6, required_guarantees=[object in (137), predicate in (1609)]
                                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as p1__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14905 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14905 AND 14905 <= predicate_max@2, required_guarantees=[predicate in (14905)]
                                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as label__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4305>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND object@3 = 10978 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 10978 AND 10978 <= object_max@6, required_guarantees=[object in (10978), predicate in (14913)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1427>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND object@3 = 1577 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 1577 AND 1577 <= object_max@6, required_guarantees=[object in (1577), predicate in (14913)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1> ?propertyTextual], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as propertyTextual__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14909 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14909 AND 14909 <= predicate_max@2, required_guarantees=[predicate in (14909)]
                    ProjectionExec: expr=[product__oid@0 as product, label__oid@2 as label, propertyTextual__oid@3 as propertyTextual, NULL as p1, p2@1 as p2]
                      FilterExec: EBV(GT(ENC_TF(p2@1), 4:4:488))
                        DecodeObjectIdsExec: projections=[product__oid, decode(p2__oid) as p2, label__oid, propertyTextual__oid]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p2__oid@1, label__oid@2, propertyTextual__oid@4]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p2__oid@1, label__oid@2]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p2__oid@1, label__oid@2]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p2__oid@1, label__oid@3]
                                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, p2__oid@2]
                                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType138>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 137, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 137 AND 137 <= object_max@6, required_guarantees=[object in (137), predicate in (1609)]
                                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?p2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as p2__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14906 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14906 AND 14906 <= predicate_max@2, required_guarantees=[predicate in (14906)]
                                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as label__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4305>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND object@3 = 10978 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 10978 AND 10978 <= object_max@6, required_guarantees=[object in (10978), predicate in (14913)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1444>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND object@3 = 1594 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 1594 AND 1594 <= object_max@6, required_guarantees=[object in (1594), predicate in (14913)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1> ?propertyTextual], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as propertyTextual__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14909 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14909 AND 14909 <= predicate_max@2, required_guarantees=[predicate in (14909)]
